2008-01-16  Sam Steingold  <sds@gnu.org>

	* list.d (make_list, NTHCDR, listof, LIST*, APPEND, NCONC, NBUTLAST):
	use while instead of dotimes and do/while instead of dotimesp

2008-01-16  Sam Steingold  <sds@gnu.org>

	* sequence.d (REDUCE): use missingp
	(CONCATENATE, seq_boolop, MAP, MAP-INTO, delete_help, substitute_help):
	use while instead of dotimes and do/while instead of dotimesp
	(verify_return_value, VERIFY_RETURN_VALUE): add function & macro
	(MAKE-SEQUENCE, coerce_sequence, COERCED-SUBSEQ, CONCATENATE, MAP)
	(MERGE): use them
	(CONCATENATE, seq_boolop, MAP): avoid GCC
	"warning: value computed is not used"

2008-01-16  Reini Urban  <rurban@x-ray.at>

	<34_trans3>
	* sequence.d, list.d: translate all comments and convert them to /**/

2008-01-15  Sam Steingold  <sds@gnu.org>

	* debug.d (climb_stack_once, climb_stack_repeat): merge into climb_stack
	(FRAME-UP-1, FRAME-DOWN-1): remove
	(FRAME-UP, FRAME-DOWN): accept an additional REPEAT argument
	* reploop.lisp (frame-limit-down, frame-limit-up, debug-up)
	(debug-top, debug-down, debug-bottom, frame-up-down):
	use (frame-up 1 ...) instead of (frame-up-1 ...)
	and (frame-down 1 ...) instead of (frame-down-1 ...)
	and (frame-up t ...) instead of (frame-up ...)
	and (frame-down t ...) instead of (frame-down ...)
	(print-backtrace): use ~:P in message
	* constsym.d, subr.d (frame_up_1, frame_down_1): remove

2008-01-15  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (quit): Note the meaning of a negative final_exitcode.
	* spvw.d (quit_instantly): Likewise.
	(main): If exitcode is negative, quit the program through a signal
	rather than through exit().
	* spvw_sigterm.d (quit_on_signal): Set final_exitcode.

2008-01-14  Bruno Haible  <bruno@clisp.org>

	* spvw_sigterm.d (set_sigterm_handler): New function.
	(uninstall_sigterm_handler, install_sigterm_handler): Use it.
	(quit_on_signal): After raising the signal, return from the function.

2008-01-14  Bruno Haible  <bruno@clisp.org>
