@@ -1,5 +1,11 @@
 2008-01-16  Sam Steingold  <sds@gnu.org>
 
+	* foreign.d (convert_function_to_foreign, convert_from_foreign)
+	(convert_from_foreign_array_fill, convert_to_foreign, ELEMENT):
+	use while instead of dotimes and do/while instead of dotimesp
+
+2008-01-16  Sam Steingold  <sds@gnu.org>
+
 	* list.d (make_list, NTHCDR, listof, LIST*, APPEND, NCONC, NBUTLAST):
 	use while instead of dotimes and do/while instead of dotimesp
 
